# cmake_practice

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
gflags_glog/: .gitignore  CMakeLists.txt  README.md  codecast002_main.cc
include/: measurement_package.h
